feat(builder): harmonize filter logic and sync siege conditions